--- a/pages/18915.html
+++ b/pages/18915.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Taniyama-Shimura conjecture in nLab
+      Wiles&#39; proof of Fermat&#39;s last theorem in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Taniyama-Shimura conjecture
+      Wiles&#39; proof of Fermat&#39;s last theorem
   </h1>
 
 
@@ -308,59 +308,35 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a>, <a class='existingWikiWord' href='/nlab/show/modular+curve'>modular curve</a>, <a class='existingWikiWord' href='/nlab/show/modular+form'>modular form</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a></p>
-</li>
-</ul>
+    <p><a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a>. By <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> this implied a proof of <a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a>.</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Modularity_theorem'>Modularity theorem</a></em></li>
+<li>Wikipdia, <em><a href='https://en.wikipedia.org/wiki/Wiles%27s_proof_of_Fermat%27s_Last_Theorem'>Wiles&#39;s proof of Fermat&#39;s last theorem</a></em></li>
 </ul>
-
-<p>
-</p>
-
-<p>
-</p>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 05:44:42 
+  Created on January  8, 2018 05:45:22 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Taniyama-Shimura+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Taniyama-Shimura+conjecture/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Taniyama-Shimura+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Taniyama-Shimura+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Taniyama-Shimura+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Taniyama-Shimura+conjecture" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Wiles%27+proof+of+Fermat%27s+last+theorem" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Taniyama-Shimura+conjecture" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Wiles%27+proof+of+Fermat%27s+last+theorem" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
