--- a/pages/18916.html
+++ b/pages/18916.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Taniyama-Shimura conjecture in nLab
+      Ribet&#39;s theorem in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Taniyama-Shimura conjecture
+      Ribet&#39;s theorem
   </h1>
 
 
@@ -308,59 +308,34 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
+    <p>In <a class='existingWikiWord' href='/nlab/show/number+theory'>number theory</a>, <em><a class='existingWikiWord' href='/nlab/show/Ken+Ribet'>Ken Ribet</a>’s theorem</em> is a statement about <a class='existingWikiWord' href='/nlab/show/Galois+representation'>Galois representations</a> associated with <a class='existingWikiWord' href='/nlab/show/modular+form'>modular forms</a>.</p>
 
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a>, <a class='existingWikiWord' href='/nlab/show/modular+curve'>modular curve</a>, <a class='existingWikiWord' href='/nlab/show/modular+form'>modular form</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a></p>
-</li>
-</ul>
+<p><a class='existingWikiWord' href='/nlab/show/Jean-Pierre+Serre'>Jean-Pierre Serre</a> ad <a class='existingWikiWord' href='/nlab/show/Ken+Ribet'>Ken Ribet</a> observed that assuming the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a> (as yet unproven at that time) it implies <a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a>. The <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>modularity theorem</a> was then proven by <a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> and <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a>, thus often known now as <em><a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a></em>.</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Modularity_theorem'>Modularity theorem</a></em></li>
+<li>Wikipedia, <a href='https://en.wikipedia.org/wiki/Ribet%27s_theorem'>Ribet&#39;s theorem</a></li>
 </ul>
-
-<p>
-</p>
-
-<p>
-</p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 05:44:42 
+  Created on January  8, 2018 05:45:00 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Taniyama-Shimura+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Taniyama-Shimura+conjecture/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Taniyama-Shimura+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Taniyama-Shimura+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ribet%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Taniyama-Shimura+conjecture" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Ribet%27s+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Taniyama-Shimura+conjecture" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Ribet%27s+theorem" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Taniyama-Shimura+conjecture" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Ribet%27s+theorem" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
