--- a/pages/16984.html
+++ b/pages/16984.html
@@ -332,18 +332,22 @@ margin-left: 0em;
 <li>
 <p>a version in global analytic geometry is mentioned at the end of <a href='http://www-personal.umich.edu/~snkitche/Conference/notes/Kremnitzer-2.pdf'>http://www-personal.umich.edu/~snkitche/Conference/notes/Kremnitzer-2.pdf</a> + <a href='http://leccap.engin.umich.edu/leccap/site/s79yndxt7qowoek7n3m'>audio</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Federico+Bambozzi'>Federico Bambozzi</a>, <a class='existingWikiWord' href='/nlab/show/Oren+Ben-Bassat'>Oren Ben-Bassat</a>, <a class='existingWikiWord' href='/nlab/show/Yakov+Kremnitzer'>Kobi Kremnizer</a>, <em>Analytic geometry over <math class='maruku-mathml' display='inline' id='mathml_bc44c1d1d17cc236c2174a8df31c20f80d4dc5eb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{F}_1</annotation></semantics></math> and the Fargues-Fontaine curve</em>, (<a href='https://arxiv.org/abs/1711.04885'>arXiv:1711.04885</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on October 15, 2017 09:29:44 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (212.91.105.73)
+  Revised on January  8, 2018 06:28:55 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (91.88.197.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fargues-Fontaine+curve/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Fargues-Fontaine+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fargues-Fontaine+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fargues-Fontaine+curve/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Fargues-Fontaine+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fargues-Fontaine+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
