--- a/pages/18920.html
+++ b/pages/18920.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Fermat curve in nLab
+      Tadeusz Balaban in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Fermat curve
+      Tadeusz Balaban
   </h1>
 
 
@@ -308,68 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The <em>Fermat curve</em> is a projective <a class='existingWikiWord' href='/nlab/show/algebraic+curve'>algebraic curve</a> over a <a class='existingWikiWord' href='/nlab/show/ground+ring'>ground field</a> <math class='maruku-mathml' display='inline' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> given by the Fermat equation</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>y</mi> <mi>n</mi></msup><mo>=</mo><msup><mi>z</mi> <mi>n</mi></msup><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
-  x^n + y^n = z^n
-  \,,
-
-</annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> is a positive <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> greater or equal <math class='maruku-mathml' display='inline' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>.</p>
-
-<p><em>Fermat’s last theorem</em> is the statement, that for <math class='maruku-mathml' display='inline' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>&gt;</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>n\gt 2</annotation></semantics></math> this equation has no solutions in rationals (or, equivalently, has no solutions in integers). In other words, the Fermat’s curve has no <math class='maruku-mathml' display='inline' id='mathml_929a4c44f57e334d4b3feedb34e15898068e6069_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℚ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Q}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/rational+point'>rational points</a>.</p>
-
-<p>Famously a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of this theorem had been announced by <a class='existingWikiWord' href='/nlab/show/Pierre+de+Fermat'>Pierre de Fermat</a>, but no proof was recorded before <a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with aid of <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a>, which by <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> implies Fermat’s last theorem (see <a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a>).</p>
-
-<p>Therefore, while Fermat’s theorem is generally accepted as proven now, the methods used in the proof go far beyond the mathematics known at <a class='existingWikiWord' href='/nlab/show/Pierre+de+Fermat'>Pierre de Fermat</a>’s time. Moreover <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> and the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>modularity theorem</a> are major conceptual statements in <a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a>, quite different in character from the content of Fermat’s last theorem in itself:</p>
-
-<blockquote>
-<p>I confess that Fermat’s Last Theorem, as an isolated proposition, has very little interest for me, because I could easily lay down a multitude of such propositions, which one could neither prove nor dispose of. (<a class='existingWikiWord' href='/nlab/show/Carl+Gauss'>Carl Friedrich Gauss</a>, quoted in J. R. Newman (ed.) <em>The World of Mathematics</em> (1956))</p>
-</blockquote>
-
-<p>It is open whether there exists a more direct proof.</p>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li>
-<p>wikipedia: <a href='http://en.wikipedia.org/wiki/Fermat_curve'>Fermat curve</a>, <a href='http://en.wikipedia.org/wiki/Fermat%27s_last_theorem'>Fermat’s last theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/eom'>eom</a>: <a href='http://www.encyclopediaofmath.org/index.php?title=p/f110070'>Fermat’s last theorem</a></p>
-</li>
-
-<li id='McLarty10'>
-<p><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>What does it take to prove Fermat’s last theorem? Grothendieck and the logic of number theory</em>, Bull. Symbolic Logic <strong>16</strong> (2010), no. 3, 359–377 <a href='http://www.jstor.org/stable/20749620'>jstor</a></p>
-</li>
+    <ul>
+<li><a href='http://www.math.rutgers.edu/component/comprofiler/userprofile/tbalaban'>webpage</a></li>
 </ul>
 
-<p>
- 
-</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_9e783267fef40fef5572269b5e24bb7a75d3faaf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/lattice+gauge+theory'>lattice gauge theory</a></li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 06:02:15 
+  Created on January  8, 2018 06:28:41 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fermat+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fermat+curve/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Fermat+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fermat+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tadeusz+Balaban" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Fermat+curve" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Tadeusz+Balaban" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Fermat+curve" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Tadeusz+Balaban" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Fermat+curve" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Tadeusz+Balaban" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
