--- a/pages/7549.html
+++ b/pages/7549.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <li><a href='http://www.math.buffalo.edu/~dimock/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_pages'>related <math class='maruku-mathml' display='inline' id='mathml_0153b4abb73dbf5184f8f572481ccf974828b83d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h2>
+<h2 id='related_lab_pages'>related <math class='maruku-mathml' display='inline' id='mathml_d3637ed7975a253b6f7475d1b50ce82a844b5fd0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h2>
 
 <ul>
 <li>
@@ -322,20 +322,27 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lattice+gauge+theory'>lattice gauge theory</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on August  4, 2017 10:49:02 
+  Revised on January  8, 2018 06:29:12 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jonathan+Dimock" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jonathan+Dimock/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Jonathan+Dimock" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jonathan+Dimock" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jonathan+Dimock" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jonathan+Dimock/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Jonathan+Dimock" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jonathan+Dimock" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
