--- a/pages/18915.html
+++ b/pages/18915.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,133 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a>. By <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> this implied a proof of <a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='arithmetic_geometry'>Arithmetic geometry</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/number+theory'>number theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/arithmetic+topology'>arithmetic topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+dimensional+arithmetic+geometry'>higher arithmetic geometry</a>, <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+geometry'>E-∞ arithmetic geometry</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/number'>number</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, <a class='existingWikiWord' href='/nlab/show/integer'>integer number</a>, <a class='existingWikiWord' href='/nlab/show/rational+number'>rational number</a>, <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a>, <a class='existingWikiWord' href='/nlab/show/irrational+number'>irrational number</a>, <a class='existingWikiWord' href='/nlab/show/complex+number'>complex number</a>, <a class='existingWikiWord' href='/nlab/show/quaternion'>quaternion</a>, <a class='existingWikiWord' href='/nlab/show/octonion'>octonion</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>adic number</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+number'>cardinal number</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+number'>ordinal number</a>, <a class='existingWikiWord' href='/nlab/show/surreal+number'>surreal number</a></li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic'>arithmetic</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peano+arithmetic'>Peano arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/second-order+arithmetic'>second-order arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/transfinite+arithmetic'>transfinite arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/cardinal+arithmetic'>cardinal arithmetic</a>, <a class='existingWikiWord' href='/nlab/show/ordinal+arithmetic'>ordinal arithmetic</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/prime+field'>prime field</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+integer'>p-adic integer</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic rational number</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+complex+number'>p-adic complex number</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a></strong>, <a class='existingWikiWord' href='/nlab/show/function+field+analogy'>function field analogy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+scheme'>arithmetic scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+curve'>arithmetic curve</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curve</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+genus'>arithmetic genus</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chern-Simons+theory'>arithmetic Chern-Simons theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Chow+group'>arithmetic Chow group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil-%C3%A9tale+topology+for+arithmetic+schemes'>Weil-étale topology for arithmetic schemes</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/absolute+cohomology'>absolute cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Weil+conjecture+on+Tamagawa+numbers'>Weil conjecture on Tamagawa numbers</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Borger%27s+absolute+geometry'>Borger&#39;s absolute geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Iwasawa-Tate+theory'>Iwasawa-Tate theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/arithmetic+jet+space'>arithmetic jet space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adelic+integral'>adelic integration</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/shtuka'>shtuka</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Frobenioid'>Frobenioid</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Arakelov+geometry'>Arakelov geometry</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/arithmetic+Riemann-Roch+theorem'>arithmetic Riemann-Roch theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/differential+algebraic+K-theory'>differential algebraic K-theory</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a>. By <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> this implied a proof of <a class='existingWikiWord' href='/nlab/show/Fermat+curve'>Fermat&#39;s last theorem</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -321,14 +447,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January  8, 2018 05:45:22 
+  Revised on January  8, 2018 07:04:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wiles%27+proof+of+Fermat%27s+last+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wiles%27+proof+of+Fermat%27s+last+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
